# aotc

./: CONTRIBUTING  README.md  pyproject.toml
aotc/: executor.py  gpu_utils.py  metrics.py  runtime.py  subprocess_worker.py  types.py  utils.py  workload.py  workload_utils.py
aotc/benchmark_db_writer/: bq_writer_utils.py  dataclass_bigquery_writer.py  dataclass_converter_utils.py  row_transformer_utils.py
aotc/benchmark_db_writer/bq_info_writer/: storage_info_writer.py
aotc/metric_extraction/: __init__.py  tensorboard.py  tensorboard_metrics.py
aotc/workloads/: __init__.py  maxtext_gpu.py  nemo.py
aotc/workloads/nemo_configs/: llama2-3b.yaml  llama2-7b.yaml  (+2 more)
src/: README.md
src/aotc/: metrics.py  system_config.py  types.py  workload_utils.py
src/aotc/benchmark_db_writer/: bigquery_types.py  pyproject.toml
src/aotc/benchmark_db_writer/bq_info_writer/: hardware_info_writer.py  model_info_writer.py  software_info_writer.py
src/aotc/benchmark_db_writer/run_summary_writer/: sample_run_summary_writer.py  test_run_summary_writer.py
src/aotc/benchmark_db_writer/schema/workload_benchmark_v2/: hardware_info_schema.py
src/aotc/benchmark_db_writer/schema_generator/: storage_info.json
src/aotc/benchmark_db_writer/src/benchmark_db_writer/: __init__.py  bq_writer_utils.py  dataclass_bigquery_writer.py  dataclass_converter_utils.py  row_transformer_utils.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/bq_info_writer/: hardware_info_writer.py  microbenchmark_workload_info_writer.py  model_info_writer.py  software_info_writer.py  storage_info_writer.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/run_summary_writer/: microbenchmark_run_summary_writer.py  run_summary_writer.py  test_run_summary_writer.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/schema/supplemental_metrics/: checkpointing_metrics_schema.py  data_loading_metrics_schema.py  network_metrics_schema.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/schema/workload_benchmark_v2/: hardware_info_schema.py  microbenchmark_run_summary_schema.py  microbenchmark_workload_info_schema.py  model_info_schema.py  software_info_schema.py  storage_info_schema.py  workload_benchmark_v2_schema.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/supplemental_metrics_writer/: checkpointing_metrics_writer.py  data_loading_metrics_writer.py  listing_metrics_writer.py  network_metrics_writer.py
src/aotc/benchmark_db_writer/src/benchmark_db_writer/tests/test_supplement_metrics/: test_data_loading_metrics_writer.py
(+12 files in other folders)
